--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -2,10 +2,10 @@
 
 <div class="container">
     <header class="jumbotron">
-        <h1>Welcome to YelpCamp</h1>
+        <h1>Welcome to TudoGallery</h1>
         <div class = "container">
-            <p>View our hand-picked campgrounds from all over the world</p>
-            <p><a class = "btn btn-primary btn-lg" href="campgrounds/new">Add new Campground</a></p>
+            <p>View scenery from all over the world</p>
+            <p><a class = "btn btn-primary btn-lg" href="campgrounds/new">Add new Scenery</a></p>
         </div>
     </header>
     <div class="row text-center" style="display:flex; flex-wrap:wrap">
