--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,14 +1,14 @@
 <% include ../partials/header%>
 <div class="container">
     <div class="row">
-        <h1 style="text-align:center">Create a new Campground</h1>
+        <h1 style="text-align:center">Create a new Scenery</h1>
         <div style="width: 30%;margin: 25px auto;">
             <form action = "/campgrounds", method = "POST">
                 <div class="form-group">
                     <input class="form-control" type = "text" placeholder = "name" name = "name">
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type = "number" placeholder = "price" name = "price" min="0.01" step="0.01">
+                    <input class="form-control" type = "number" placeholder = "rating" name = "price" min="1" step="1" max="5">
                 </div>
                 <div class="form-group">
                     <input class="form-control"type = "text" placeholder = "url" name = "image">
