--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,21 +1,12 @@
 <% include ../partials/header%>
 <div class="container">
     <div class='row'>
-        <div class="col-md-3">
-            <p class="lead">YelpCamp</p>
-            <div class="list-group">
-                <li class="list-group-item active">Info1</li>
-                <li class="list-group-item">Info1</li>
-                <li class="list-group-item">Info1</li>
-            </div>
-        </div>
-        
-        <div class="col-md-9">
+        <div class="col-md-12">
             <div class="thumbnail">
                 <img src="<%= campground.image %> ">
             </div>
             <div class="caption-full">
-                <h4 class="pull-right">$<%= campground.price %>/night</h4>
+                <h4 class="pull-right">rating:<%= campground.price %></h4>
                 <h4><a><%=campground.name%></a></h4>
                 <p><%=campground.description%></p>
                 <p>
@@ -59,7 +50,5 @@
         </div>
     </div>
 </div>
-
-
 
 <% include ../partials/footer%>
