--- a/views/landing_naive.ejs
+++ b/views/landing_naive.ejs
@@ -1,8 +1,8 @@
 <% include partials/header%>
 
 <h1>Landing Page</h1>
-<p>Welcome to Yelpcamp</p>
+<p>Welcome to Potato Album</p>
 
-<a href="/campgrounds">View All Campgrounds</a>
+<a href="/campgrounds">View All Photos</a>
 
 <% include partials/footer%>
