--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TudoGallery</title>
+        <title>PotatoAlbum</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <link rel="stylesheet" href="/stylesheets/landing.css">
         <!--Change the classed according to different browser-->
@@ -23,8 +23,8 @@
     </div>
     
     <div id="landing-header">
- 		<h1>Welcome to TudoGallery!</h1>
-		<a href="/campgrounds" class="btn btn-lg btn-success">View All Scenery</a>
+ 		<h1>Welcome to PotatoAlbum!</h1>
+		<a href="/photos" class="btn btn-lg btn-success">View All Scenery</a>
     </div>
     
     <ul class="slideshow">
