--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -3,7 +3,7 @@
     <div class="row">
         <h1 style="text-align:center">Edit Comment</h1>
         <div style="width: 30%;margin: 25px auto;">
-            <form action = "/campgrounds/<%= campgroundId%>/comments/<%= comment._id%>?_method=PUT", method = "POST">
+            <form action = "/photos/<%= campgroundId%>/comments/<%= comment._id%>?_method=PUT", method = "POST">
                 <div class="form-group">
                     <input class="form-control" type = "text" value = "<%= comment.text%>" name = "comment[text]">
                 </div>
@@ -11,7 +11,7 @@
                     <button class="btn btn-lg btn-primary btn-block">Submit</button>
                 </div>
             </form>
-            <a href="/campgrounds">Go back</a>
+            <a href="/photos">Go back</a>
         </div>
     </div>
 </div>
