changed photo name

--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -3,7 +3,7 @@
     <div class="row">
         <h1 style="text-align:center">Add New Comment to <%= campground.name%></h1>
         <div style="width: 30%;margin: 25px auto;">
-            <form action = "/campgrounds/<%= campground._id%>/comments", method = "POST">
+            <form action = "/photos/<%= campground._id%>/comments", method = "POST">
                 <div class="form-group">
                     <input class="form-control" type = "text" placeholder = "text" name = "comment[text]">
                 </div>
@@ -11,7 +11,7 @@
                     <button class="btn btn-lg btn-primary btn-block">Submit</button>
                 </div>
             </form>
-            <a href="/campgrounds">Go back</a>
+            <a href="/photos">Go back</a>
         </div>
     </div>
 </div>
