--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -3,7 +3,7 @@
     <div class="row">
         <h1 style="text-align:center">Edit <%=campground.name%></h1>
         <div style="width: 30%;margin: 25px auto;">
-            <form action = "/campgrounds/<%= campground._id%>?_method=PUT", method = "POST">
+            <form action = "/photos/<%= campground._id%>?_method=PUT", method = "POST">
                 <div class="form-group">
                     <input class="form-control" type = "text" value = "<%= campground.name%>" name = "campground[name]">
                 </div>
@@ -20,7 +20,7 @@
                     <button class="btn btn-lg btn-primary btn-block">Submit</button>
                 </div>
             </form>
-            <a href="/campgrounds">Go back</a>
+            <a href="/photos">Go back</a>
         </div>
     </div>
 </div>
