--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -2,10 +2,10 @@
 
 <div class="container">
     <header class="jumbotron">
-        <h1>Welcome to TudoGallery</h1>
+        <h1>Welcome to PotatoAlbum</h1>
         <div class = "container">
             <p>View scenery from all over the world</p>
-            <p><a class = "btn btn-primary btn-lg" href="campgrounds/new">Add new Scenery</a></p>
+            <p><a class = "btn btn-primary btn-lg" href="photos/new">Add new Scenery</a></p>
         </div>
     </header>
     <div class="row text-center" style="display:flex; flex-wrap:wrap">
@@ -17,7 +17,7 @@
                         <h4><%=c.name%></h4>
                     </div>
                     <p>
-                        <a href="/campgrounds/<%= c._id%>" class="btn btn-primary">More Info</a>
+                        <a href="/photos/<%= c._id%>" class="btn btn-primary">More Info</a>
                     </p>
                 </div>
             </div>
