--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -3,7 +3,7 @@
     <div class="row">
         <h1 style="text-align:center">Create a new Scenery</h1>
         <div style="width: 30%;margin: 25px auto;">
-            <form action = "/campgrounds", method = "POST">
+            <form action = "/photos", method = "POST">
                 <div class="form-group">
                     <input class="form-control" type = "text" placeholder = "name" name = "name">
                 </div>
@@ -20,7 +20,7 @@
                     <button class="btn btn-lg btn-primary btn-block">Submit</button>
                 </div>
             </form>
-            <a href="/campgrounds">Go back</a>
+            <a href="/photos">Go back</a>
         </div>
     </div>
 </div>
